0309 list