@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -82,7 +83,7 @@ class arrayTest {
 
         List<Integer> list = Arrays.stream(arr)
                 .boxed()
-                .toList();
+                .collect(Collectors.toList());
 
 
         System.out.println("list = " + list);
